@@ -967,6 +967,11 @@ extern void util_trunc_name_right(char *texto,int max_length,int char_buffer_siz
 
 extern void util_drag_drop_file(char *filepath);
 
+extern int util_extract_preview_file_expandable(char *nombre,char *tmpdir);
+extern void util_extract_preview_file_simple(char *nombre,char *tmpdir,char *tmpfile_scr,int file_size);
+
+extern int util_get_extract_preview_type_file(char *nombre);
+
 extern int util_if_filesystem_plusidedos(z80_byte *memoria,int total_size);
 extern int util_if_filesystem_fat16(z80_byte *memoria,int total_size);
 
